--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 JWT_SECRET=myverysecurekey123
 MONGO_URI=mongodb://localhost:27017/Ideanest_authdetails
+GOOGLE_CLIENT_ID=341602853786-ntigd0o7sfnu1g09uvbblhvmd4adno5k.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+FRONTEND_URL=http://localhost:5173
+
