--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
+    "firebase": "^11.9.1",
+    "firebase-admin": "^13.4.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.15.1",
+    "mongoose": "^8.16.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0"
   }
