--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "express-session": "^1.18.1",
     "firebase": "^11.9.1",
     "firebase-admin": "^13.4.0",
+    "google-auth-library": "^10.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "socket.io": "^4.8.1"
   }
 }
