--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ CALLBACK_URL=http://localhost:5000/api/auth/google/callback
 MONGO_URI=mongodb+srv://harshajami2005:harshajami20050203@cluster0.ma2tku4.mongodb.net/mydatabase?retryWrites=true&w=majority&appName=Cluster0
 
 
+BACKEND_URL=https://ideanest-backend.onrender.com
+FRONTEND_URL=https://idea-nest-frontend.vercel.app/login
