--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ JWT_SECRET=myverysecurekey123
 # MONGO_URI=mongodb://localhost:27017/Ideanest_authdetails
 GOOGLE_CLIENT_ID=341602853786-ntigd0o7sfnu1g09uvbblhvmd4adno5k.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-FRONTEND_URL=http://localhost:5173
+# FRONTEND_URL=http://localhost:5173
 CALLBACK_URL=http://localhost:5000/api/auth/google/callback
 MONGO_URI=mongodb+srv://harshajami2005:harshajami20050203@cluster0.ma2tku4.mongodb.net/mydatabase?retryWrites=true&w=majority&appName=Cluster0
 
