--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@ MONGO_URI=mongodb+srv://harshajami2005:harshajami20050203@cluster0.ma2tku4.mongo
 
 
 BACKEND_URL=https://ideanest-backend.onrender.com
-FRONTEND_URL=https://idea-nest-frontend.vercel.app
+FRONTEND_URL=https://idea-nest-frontend-hho4-630649l1i-harsha022005s-projects.vercel.app
